--- a/casi-demo/pom.xml
+++ b/casi-demo/pom.xml
@@ -85,10 +85,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>spy</groupId>
-            <artifactId>memcached</artifactId>
-            <version>2.6.3</version>
-        </dependency>-->
+            <artifactId>spymemcached</artifactId>
+            <version>2.8.4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
