--- a/casi-dao/pom.xml
+++ b/casi-dao/pom.xml
@@ -33,12 +33,12 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.0.2</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.0.6</version>
+            <version>${mybatis.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
