--- a/casi-biz/pom.xml
+++ b/casi-biz/pom.xml
@@ -23,12 +23,12 @@
             <artifactId>lucene-core</artifactId>
             <version>3.5.0</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-dataimporthandler-extras</artifactId>
             <version>3.5.0</version>
-        </dependency>-->
-<!--        <dependency>
+        </dependency>
+        <dependency>
             <artifactId>solr-solrj</artifactId>
             <groupId>org.apache.solr</groupId>
             <version>3.5.0</version>
@@ -37,7 +37,7 @@
             <artifactId>solr-core</artifactId>
             <groupId>org.apache.solr</groupId>
             <version>3.5.0</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis</groupId>
