--- a/casi.dev.properties
+++ b/casi.dev.properties
@@ -2,6 +2,6 @@ SOLR_URL=http://localhost:8081/solr
 INDEX_DIR=/home/a/lucene_data
 ############## mysql ds ########################
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/person?useUnicode=true&amp;characterEncoding=UTF-8
+url=jdbc:mysql://localhost:3306/casi?useUnicode=true&amp;characterEncoding=UTF-8
 username=root
 password=root
