--- a/casi.test.properties
+++ b/casi.test.properties
@@ -1,5 +1,5 @@
 ############## mysql ds ########################
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://10.13.120.154:3306/phpdb?useUnicode=true&amp;characterEncoding=UTF-8
+url=jdbc:mysql://10.13.120.154:3306/casi?useUnicode=true&amp;characterEncoding=UTF-8
 username=root
 password=root
