--- a/casi.real.properties
+++ b/casi.real.properties
@@ -1,5 +1,5 @@
 ############## mysql ds ########################
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/casidb?useUnicode=true&amp;characterEncoding=UTF-8
+url=jdbc:mysql://localhost:3306/casi?useUnicode=true&amp;characterEncoding=UTF-8
 username=root
 password=root
