--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
                 <spring.version>3.1.0.RELEASE</spring.version>
                 <struts.version>2.3.4.1</struts.version>
                 <mybatis.version>3.1.1</mybatis.version>
+                <solr.version>3.6.1</solr.version>
+                <lucene.version>3.6.1</lucene.version>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -27,6 +29,8 @@
                 <spring.version>3.1.0.RELEASE</spring.version>
                 <struts.version>2.3.4.1</struts.version>
                 <mybatis.version>3.1.1</mybatis.version>
+                <solr.version>3.6.1</solr.version>
+                <lucene.version>3.6.1</lucene.version>
             </properties>
         </profile>
          <profile>
@@ -36,6 +40,8 @@
                 <spring.version>3.1.0.RELEASE</spring.version>
                 <struts.version>2.3.4.1</struts.version>
                 <mybatis.version>3.1.1</mybatis.version>
+                <solr.version>3.6.1</solr.version>
+                <lucene.version>3.6.1</lucene.version>
             </properties>
         </profile>
     </profiles>
