--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <modules>
         <module>casi-commons</module>
         <module>casi-dao</module>
@@ -116,4 +115,14 @@
         <module>casi-zookeeper</module>
         <module>casi-hbase</module>
     </modules>
+    <developers>
+        <developer>
+            <name>xiujun guo</name>
+            <id>xiujguo</id>
+            <email>xiujun.guo@gmail.com</email>
+            <organization>cisco</organization>
+            <timezone>+8</timezone>
+            <roles>owner</roles>
+        </developer>
+    </developers>
 </project>
