--- a/casi-rpc/pom.xml
+++ b/casi-rpc/pom.xml
@@ -10,6 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>casi-rpc</artifactId>
-
-
+    <packaging>jar</packaging>
+    <name>casi-rpc</name>
+    <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.5.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.2.7.Final</version>
+        </dependency>
+    </dependencies>
 </project>
