--- a/casi-dao/pom.xml
+++ b/casi-dao/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>dbcp</artifactId>
+            <version>6.0.36</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
