--- a/casi-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/casi-webapp/src/main/webapp/WEB-INF/web.xml
@@ -97,10 +97,10 @@
             <page-encoding>UTF-8</page-encoding>
         </jsp-property-group>
     </jsp-config>
-    <resource-ref>
+<!--    <resource-ref>
         <res-ref-name>jdbc/mysqlDataSource</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
         <res-sharing-scope>Shareable</res-sharing-scope>
-    </resource-ref>
+    </resource-ref>-->
 </web-app>
