--- a/casi-dao/pom.xml
+++ b/casi-dao/pom.xml
@@ -10,10 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>casi-dao</artifactId>
-      <packaging>jar</packaging>
-     <name>casi-dao</name>
+    <packaging>jar</packaging>
+    <name>casi-dao</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.casi</groupId>
             <artifactId>casi-commons</artifactId>
@@ -56,6 +68,7 @@
             <artifactId>dbcp</artifactId>
             <version>6.0.36</version>
         </dependency>
+
     </dependencies>
     <build>
         <resources>
