--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
             <id>default</id>
             <properties>
                 <props>casi.dev</props>
-                <spring.version>3.1.0.RELEASE</spring.version>
-                <struts.version>2.3.4.1</struts.version>
+                <spring.version>3.1.2.RELEASE</spring.version>
+                <struts.version>2.3.8</struts.version>
                 <mybatis.version>3.1.1</mybatis.version>
                 <solr.version>3.6.1</solr.version>
                 <lucene.version>3.6.1</lucene.version>
@@ -26,8 +26,8 @@
             <id>test</id>
             <properties>
                 <props>casi.test</props>
-                <spring.version>3.1.0.RELEASE</spring.version>
-                <struts.version>2.3.4.1</struts.version>
+                <spring.version>3.1.2.RELEASE</spring.version>
+                <struts.version>2.3.8</struts.version>
                 <mybatis.version>3.1.1</mybatis.version>
                 <solr.version>3.6.1</solr.version>
                 <lucene.version>3.6.1</lucene.version>
@@ -37,8 +37,8 @@
             <id>real</id>
             <properties>
                 <props>casi.real</props>
-                <spring.version>3.1.0.RELEASE</spring.version>
-                <struts.version>2.3.4.1</struts.version>
+                <spring.version>3.1.2.RELEASE</spring.version>
+                <struts.version>2.3.8</struts.version>
                 <mybatis.version>3.1.1</mybatis.version>
                 <solr.version>3.6.1</solr.version>
                 <lucene.version>3.6.1</lucene.version>
@@ -181,17 +181,82 @@
             <version>0.7-groovy-2.0</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>
-                    <groupId>org.spockframework</groupId>
-                    <artifactId>spock-spring</artifactId>
-                    <version>0.7-groovy-2.0</version>
-                    <scope>test</scope>
-                </dependency>-->
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-spring</artifactId>
+            <version>0.7-groovy-2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>tomcat</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>4.0.6</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
     <modules>
