--- a/casi-commons/src/main/resources/log4j.properties
+++ b/casi-commons/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.infoLog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.infoLog.File=/home/a/project/output/casi/logs/casi-info.log
 log4j.appender.infoLog.DatePattern='.'yyyy-MM-dd
 log4j.appender.infoLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.infoLog.layout.ConversionPattern=%d %p [%c] -- %m%n
+log4j.appender.infoLog.layout.ConversionPattern=%d %p [%l] -- %m%n
 
 log4j.appender.errorLog.Threshold = ERROR
 log4j.appender.errorLog.Append = true
@@ -14,9 +14,9 @@ log4j.appender.errorLog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.errorLog.File=/home/a/project/output/casi/logs/casi-error.log
 log4j.appender.errorLog.DatePattern='.'yyyy-MM-dd
 log4j.appender.errorLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.errorLog.layout.ConversionPattern=%d %p [%c] -- %m%n
+log4j.appender.errorLog.layout.ConversionPattern=%d %p [%l] -- %m%n
 
 log4j.appender.debugLog.Threshold = DEBUG
 log4j.appender.debugLog=org.apache.log4j.ConsoleAppender
 log4j.appender.debugLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.debugLog.layout.ConversionPattern=%d %p [%c] -- %m%n
+log4j.appender.debugLog.layout.ConversionPattern=%d %p [%l]-- %m%n
