--- a/casi-webapp/pom.xml
+++ b/casi-webapp/pom.xml
@@ -92,9 +92,9 @@
         <finalName>casi-webapp</finalName>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>tomcat-maven-plugin</artifactId>
-                <version>1.1</version>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat6-maven-plugin</artifactId>
+                <version>2.0</version>
                 <configuration>
                     <warDirectory>target/casi-webapp.war</warDirectory>
                     <contextFile>etc/tomcat-context.xml</contextFile>
