--- a/casi-webapp/pom.xml
+++ b/casi-webapp/pom.xml
@@ -105,16 +105,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                    <webResources>
-                        <resource>
-                            <directory>src/main/webapp/WEB-INF</directory>
-                            <includes>
-                                <include>web.xml</include>
-                            </includes>
-                            <filtering>true</filtering>
-                            <targetPath>WEB-INF</targetPath>
-                        </resource>
-                    </webResources>
+                    <containerConfigXML>etc/tomcat-context.xml</containerConfigXML>
                 </configuration>
             </plugin>
         </plugins>
