--- a/casi-webapp/pom.xml
+++ b/casi-webapp/pom.xml
@@ -89,7 +89,6 @@
 
     </dependencies>
     <build>
-        <finalName>casi-webapp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
@@ -97,7 +96,7 @@
                 <version>2.0</version>
                 <configuration>
                     <warDirectory>target/casi-webapp.war</warDirectory>
-                    <contextFile>etc/tomcat-context.xml</contextFile>
+                    <contextFile>etc/casi-context.xml</contextFile>
                 </configuration>
             </plugin>
             <plugin>
@@ -105,7 +104,8 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                    <containerConfigXML>etc/tomcat-context.xml</containerConfigXML>
+                    <warName>casi-webapp</warName>
+                    <containerConfigXML>etc/casi-context.xml</containerConfigXML>
                 </configuration>
             </plugin>
         </plugins>
