--- a/casi-demo/pom.xml
+++ b/casi-demo/pom.xml
@@ -45,5 +45,15 @@
             <version>2.8.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-client</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.tools.btrace</groupId>
+            <artifactId>btrace-agent</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 </project>
