--- a/casi-dao/pom.xml
+++ b/casi-dao/pom.xml
@@ -47,9 +47,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>dbcp</artifactId>
-            <version>6.0.36</version>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
         </dependency>
     </dependencies>
 </project>
