--- a/casi-jdo/pom.xml
+++ b/casi-jdo/pom.xml
@@ -20,19 +20,58 @@
         <dependency>
             <groupId>org.datanucleus</groupId>
             <artifactId>datanucleus-core</artifactId>
-            <version>2.1.0-release</version>
+            <version>3.2.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>javax.jdo</groupId>
-            <artifactId>jdo2-api</artifactId>
-            <version>2.3-eb</version>
+            <artifactId>jdo-api</artifactId>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>org.datanucleus</groupId>
             <artifactId>datanucleus-rdbms</artifactId>
-            <version>2.1.0-release</version>
+            <version>3.2.7</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-enhancer</artifactId>
+            <version>3.1.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-api-jdo</artifactId>
+            <version>3.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-maven-plugin</artifactId>
+                <version>3.3.0-release</version>
+                <configuration>
+                    <api>JDO</api>
+                    <!--<log4jConfiguration>${project.basedir}/log4j.properties</log4jConfiguration>-->
+                    <verbose>true</verbose>
+                </configuration>
+                <executions>
+                    <execution>
+                        <!--<phase>test</phase>-->
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>enhance</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
