--- a/casi-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/casi-webapp/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>/WEB-INF/log4j.properties</param-value>
+        <param-value>classpath*:log4j.properties</param-value>
     </context-param>
     <context-param>
         <param-name>webAppRootKey</param-name>
