--- a/casi-jdo/pom.xml
+++ b/casi-jdo/pom.xml
@@ -61,6 +61,7 @@
                     <api>JDO</api>
                     <!--<log4jConfiguration>${project.basedir}/log4j.properties</log4jConfiguration>-->
                     <verbose>true</verbose>
+                    <fork>false</fork>
                 </configuration>
                 <executions>
                     <execution>
