--- a/casi-commons/pom.xml
+++ b/casi-commons/pom.xml
@@ -12,4 +12,11 @@
     <packaging>jar</packaging>
     <name>casi-commons</name>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+    </dependencies>
 </project>
