--- a/casi-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/casi-webapp/src/main/webapp/WEB-INF/web.xml
@@ -16,13 +16,14 @@
             classpath*:springbeans-dao-beans.xml
             classpath*:springbeans-biz-bo.xml
             classpath*:springbeans-biz-tx.xml
+            <!--classpath*:springbeans-service.xml-->
             classpath*:springbeans-*.xml
         </param-value>
     </context-param>
 
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath*:log4j.properties</param-value>
+        <param-value>classpath:log4j.properties</param-value>
     </context-param>
     <context-param>
         <param-name>webAppRootKey</param-name>
@@ -83,6 +84,21 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
+    <!--提供HTTPinvoker 服务配置-->
+    <servlet>
+        <servlet-name>remote</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath*:springbeans-service.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>remote</servlet-name>
+        <url-pattern>/remoting/*</url-pattern>
+    </servlet-mapping>
 
     <!-- Welcome file lists -->
     <welcome-file-list>
