--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>casi-demo</module>
         <module>casi-zookeeper</module>
         <module>casi-hbase</module>
+        <module>casi-service</module>
 
     </modules>
     <profiles>
