--- a/casi-demo/pom.xml
+++ b/casi-demo/pom.xml
@@ -45,10 +45,9 @@
             <version>4.1.2</version>
         </dependency>
         <dependency>
-            <groupId>spy</groupId>
+            <groupId>net.spy</groupId>
             <artifactId>spymemcached</artifactId>
-            <version>2.8.4</version>
-            <scope>provided</scope>
+            <version>2.10.3</version>
         </dependency>
         <dependency>
             <groupId>com.sun.tools.btrace</groupId>
