--- a/casi-demo/pom.xml
+++ b/casi-demo/pom.xml
@@ -15,6 +15,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.casi</groupId>
             <artifactId>casi-commons</artifactId>
             <version>1.0</version>
